Added extra text to webpage

--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
   </style>
 </head>
 <body>
-  <h1>This is a website.</h1>
-  <p>A website I made.</p>
+  <h1>Owen Woodal</h1>
+  <p>Developer / Designer</p>
+  <p>Reachable at:</p>
+    <li>owoodal@clemson.edu</li>
+  <h2>PROJECTS:</h2>
+    <li></li>
+    <li></li>
 </body>
 </html>
