Changed size of list text

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <h1>Owen Woodal</h1>
   <p>Developer / Designer</p>
-  <p>Reachable at:</p>
+  <h2>Reachable at:</h2>
     <li>owoodal@clemson.edu</li>
   <h2>PROJECTS:</h2>
     <li></li>
