Fixed minor typo

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </style>
 </head>
 <body>
-  <h1>Owen Woodal</h1>
+  <h1>Owen Woodall</h1>
   <p>Developer / Designer</p>
   <h2>Reachable at:</h2>
     <li>owoodal@clemson.edu</li>
